Add Mansory plug-in

--- a/air-filters.html
+++ b/air-filters.html
@@ -6,6 +6,7 @@
   <title>Фильтры в Алма-Ате</title>
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -78,179 +79,163 @@
         <h2 class="title title--h2">Воздушные фильтры AG, Briggs Stratton</h2>
       </div>
       <div class="items__list">
-
-        <!-- 1ST COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/ag-10351.jpg" alt="AG 10351" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 10351</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 800 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 10351</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 800 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/ag-85939.jpg" alt="AG 85939" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 85939</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 900 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 85939</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 900 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-ae-1218-90.jpg" alt="Briggs & Stratton 1218" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1218</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">3 499 ₸</span>
-              <p class="items__list-item-price-old-value">3 850 ₸</p>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1218</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">3 499 ₸</span>
+            <p class="items__list-item-price-old-value">3 850 ₸</p>
           </div>
         </div>
-
-        <!-- 2ND COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/ag-1903-16.jpg" alt="AG 1903-16" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 1903-16</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">4 099 ₸</span>
-              <p class="items__list-item-price-old-value">4 580 ₸</p>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 1903-16</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">4 099 ₸</span>
+            <p class="items__list-item-price-old-value">4 580 ₸</p>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/ag-591583.jpg" alt="AG 591583" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 591583</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 250 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 591583</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 250 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-491588.jpg" alt="Briggs Stratton 491588" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 491588</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 850 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 491588</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 850 ₸</span>
           </div>
         </div>
-
-        <!-- 3RD COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/ag-900.jpg" alt="AG 900" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 900</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 550 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 900</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
-              <img src="img/items/ag-678972.jpg" alt="AG 678972" class="items__list-item-img">
-            </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 678972</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 350 ₸</span>
-            </div>
-          </div>
-          <div class="items__list-item">
-            <a href="#">
-              <img src="img/items/briggs-499486S.jpg" alt="Briggs Stratton 4986S" class="items__list-item-img">
-            </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 4986S</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 950 ₸</span>
-            </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 550 ₸</span>
           </div>
         </div>
-
-        <!-- 4TH COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
+              <img src="img/items/ag-678972.jpg" alt="AG 678972" class="items__list-item-img">
+            </a>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 678972</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 350 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
+              <img src="img/items/briggs-499486S.jpg" alt="Briggs Stratton 4986S" class="items__list-item-img">
+            </a>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 4986S</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 950 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/ag-03839.jpg" alt="AG 3839" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 3839</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 000 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 3839</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">4 000 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-se-1215-90.jpg" alt="Briggs SE-1215-90" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1590</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">3 199 ₸</span>
-              <p class="items__list-item-price-old-value">3 550 ₸</p>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1590</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">3 199 ₸</span>
+            <p class="items__list-item-price-old-value">3 550 ₸</p>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-593260.jpg" alt="Briggs Stratton 5932" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 5932</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 250 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 5932</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 250 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-593260c.jpg" alt="Briggs Stratton 5932C" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 5932C</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 100 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 5932C</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 100 ₸</span>
           </div>
         </div>
       </div>
@@ -300,6 +285,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/masonry.pkgd.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
