--- a/fuel-filters.html
+++ b/fuel-filters.html
@@ -6,6 +6,7 @@
   <title>Фильтры в Алма-Ате</title>
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -78,139 +79,125 @@
         <h2 class="title title--h2">Топливные фильтры Parker Racor, AG, Briggs & Stratton</h2>
       </div>
       <div class="items__list">
-        <!-- 1ST COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/parker-racor-245r.jpg" alt="Parker Racor 245R" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor 245R</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">6 800 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor 245R</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">6 800 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/parker-racor-r90s.jpg" alt="Parker Racor R90S" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R90S6</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">5 900 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor R90S6</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">5 900 ₸</span>
           </div>
         </div>
-
-        <!-- 2ND COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/parker-racor-r24s.jpg" alt="Parker Racor R24S" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R24S</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">4 899 ₸</span>
-              <p class="items__list-item-price-old-value">5 550 ₸</p>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor R24S</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">4 899 ₸</span>
+            <p class="items__list-item-price-old-value">5 550 ₸</p>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/parker-racor-r20p.jpg" alt="Parker Racor R20P" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R20P</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">5 650 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor R20P</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">5 650 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-69684.jpg" alt="Briggs & Stratton 69684" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs & Stratton 69684</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">6 850 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs & Stratton 69684</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">6 850 ₸</span>
           </div>
         </div>
-        <!-- 3RD COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/parker-racor-r60t.jpg" alt="Parker Racor R60T" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R60T</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 650 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor R60T</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
-              <img src="img/items/parker-racor-r12s.jpg" alt="Parker Racor R12S" class="items__list-item-img">
-            </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R12S</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 750 ₸</span>
-            </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">4 650 ₸</span>
           </div>
         </div>
-
-        <!-- 4TH COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
+              <img src="img/items/parker-racor-r12s.jpg" alt="Parker Racor R12S" class="items__list-item-img">
+            </a>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor R12S</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">4 750 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/parker-racor-r45s.jpg" alt="Parker Racor R45S" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R45S</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 850 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor R45S</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">4 850 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/ag-sf8456.jpg" alt="AG SF8456" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG SF8456</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 750 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG SF8456</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">4 750 ₸</span>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-lr10.jpg" alt="Briggs & Stratton LR10" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton LR10</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">3 750 ₸</span>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton LR10</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value">3 750 ₸</span>
           </div>
         </div>
       </div>
@@ -260,6 +247,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/masonry.pkgd.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
