--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <li class="page-header__menu-list-item"><a href="oil-filters.html" class="link link--black">Маслянные</a></li>
           <li class="page-header__menu-list-item"><a href="fuel-filters.html" class="link link--black">Топливные</a></li>
           <li class="page-header__menu-list-item"><a href="air-filters.html" class="link link--black">Воздушные</a></li>
-          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Доставка и оплата</a></li>
-          <li class="page-header__menu-list-item"><a href="#" class="link link--black">Контакты</a></li>
+          <li class="page-header__menu-list-item"><a href="index.html#index-shipping" class="link link--black">Доставка и оплата</a></li>
+          <li class="page-header__menu-list-item"><a href="index.html#index-contacts" class="link link--black">Контакты</a></li>
           <li class="page-header__menu-list-item page-header__menu-list-item--cart"><a href="cart.html">Корзина пуста</a></li>
           <li class="page-header__menu-list-item page-header__menu-list-item--contacts"><a href="tel:+77001286432">+7 700 128 64 32</a>
             <br>Работаем с 8:00 до 20:00</li>
@@ -70,60 +70,56 @@
     <section class="items items--sale">
       <h2 class="items__title--sale title title--h2">Фильтры со скидкой<sup><a href="#" class="link link--orange">посмотреть все</a></sup></h2>
       <div class="items__list items__list--sale">
-        <div class="items__list-column-wrap items__list-column-wrap--sale">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-se-1215-90.jpg" alt="Briggs SE-1215-90" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs  Stratton 1590</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">3 199 ₸</span>
-              <p class="items__list-item-price-old-value">3 550 ₸</p>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs  Stratton 1590</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
-              <img src="img/items/ag-1903-16.jpg" alt="AG 1903-16" class="items__list-item-img">
-            </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">AG 1903-16</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">4 099 ₸</span>
-              <p class="items__list-item-price-old-value">4 580 ₸</p>
-            </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">3 199 ₸</span>
+            <p class="items__list-item-price-old-value">3 550 ₸</p>
           </div>
         </div>
-        <div class="items__list-column-wrap items__list-column-wrap--sale">
-          <div class="items__list-item">
-            <a href="#">
+        <div class="items__list-item">
+          <a href="#">
+              <img src="img/items/ag-1903-16.jpg" alt="AG 1903-16" class="items__list-item-img">
+            </a>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">AG 1903-16</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">4 099 ₸</span>
+            <p class="items__list-item-price-old-value">4 580 ₸</p>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/parker-racor-r24s.jpg" alt="Parker Racor R24S" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Parker Racor R24S</a>
-              <p class="items__list-item-text-desc">Фильтр топливный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">4 899 ₸</span>
-              <p class="items__list-item-price-old-value">5 550 ₸</p>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Parker Racor R24S</a>
+            <p class="items__list-item-text-desc">Фильтр топливный</p>
           </div>
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">4 899 ₸</span>
+            <p class="items__list-item-price-old-value">5 550 ₸</p>
+          </div>
+        </div>
+        <div class="items__list-item">
+          <a href="#">
               <img src="img/items/briggs-ae-1218-90.jpg" alt="Briggs AE-1218-90" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1218</a>
-              <p class="items__list-item-text-desc">Фильтр воздушный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value items__list-item-price-value--sale">3 499 ₸</span>
-              <p class="items__list-item-price-old-value">3 850 ₸</p>
-            </div>
+          <div class="items__list-item-text">
+            <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton 1218</a>
+            <p class="items__list-item-text-desc">Фильтр воздушный</p>
+          </div>
+          <div class="items__list-item-price">
+            <span class="items__list-item-price-value items__list-item-price-value--sale">3 499 ₸</span>
+            <p class="items__list-item-price-old-value">3 850 ₸</p>
           </div>
         </div>
       </div>
