--- a/oil-filters.html
+++ b/oil-filters.html
@@ -6,6 +6,7 @@
   <title>Фильтры в Алма-Ате</title>
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -78,8 +79,6 @@
         <h2 class="title title--h2">Маслянные фильтры Briggs & Stratton</h2>
       </div>
       <div class="items__list">
-
-        <!-- 1ST COLUMN -->
         <div class="items__list-column-wrap">
           <div class="items__list-item">
             <a href="#">
@@ -105,92 +104,80 @@
               <span class="items__list-item-price-value">5 100 ₸</span>
             </div>
           </div>
-        </div>
-
-        <!-- 2ND COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+          <div class="items__list-column-wrap">
+            <div class="items__list-item">
+              <a href="#">
               <img src="img/items/briggs-23198.jpg" alt="Briggs Stratton S213-3" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S213-3</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              <div class="items__list-item-text">
+                <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S213-3</a>
+                <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              </div>
+              <div class="items__list-item-price">
+                <span class="items__list-item-price-value">4 850 ₸</span>
+              </div>
             </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 850 ₸</span>
-            </div>
-          </div>
-          <div class="items__list-item">
-            <a href="#">
+            <div class="items__list-item">
+              <a href="#">
               <img src="img/items/briggs-491056.jpg" alt="Briggs Stratton M235-3" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton M235-3</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              <div class="items__list-item-text">
+                <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton M235-3</a>
+                <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              </div>
+              <div class="items__list-item-price">
+                <span class="items__list-item-price-value">4 50 ₸</span>
+              </div>
             </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 50 ₸</span>
-            </div>
-          </div>
-        </div>
-
-        <!-- 3RD COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+            <div class="items__list-item">
+              <a href="#">
               <img src="img/items/briggs-32134.jpg" alt="Briggs Stratton S213-4" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S213-4</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              <div class="items__list-item-text">
+                <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S213-4</a>
+                <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              </div>
+              <div class="items__list-item-price">
+                <span class="items__list-item-price-value">5 050 ₸</span>
+              </div>
             </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">5 050 ₸</span>
-            </div>
-          </div>
-          <div class="items__list-item">
-            <a href="#">
+            <div class="items__list-item">
+              <a href="#">
               <img src="img/items/briggs-492932s.jpg" alt="Briggs Stratton S212" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S212</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              <div class="items__list-item-text">
+                <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S212</a>
+                <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              </div>
+              <div class="items__list-item-price">
+                <span class="items__list-item-price-value">4 250 ₸</span>
+              </div>
             </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 250 ₸</span>
-            </div>
-          </div>
-        </div>
-
-        <!-- 4TH COLUMN -->
-        <div class="items__list-column-wrap">
-          <div class="items__list-item">
-            <a href="#">
+            <div class="items__list-item">
+              <a href="#">
               <img src="img/items/briggs-79589.jpg" alt="Briggs Stratton S210" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S210</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              <div class="items__list-item-text">
+                <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S210</a>
+                <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              </div>
+              <div class="items__list-item-price">
+                <span class="items__list-item-price-value">4 500 ₸</span>
+              </div>
             </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 500 ₸</span>
-            </div>
-          </div>
-          <div class="items__list-item">
-            <a href="#">
+            <div class="items__list-item">
+              <a href="#">
               <img src="img/items/briggs-696854.jpg" alt="Briggs S213" class="items__list-item-img">
             </a>
-            <div class="items__list-item-text">
-              <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S213</a>
-              <p class="items__list-item-text-desc">Фильтр маслянный</p>
-            </div>
-            <div class="items__list-item-price">
-              <span class="items__list-item-price-value">4 150 ₸</span>
+              <div class="items__list-item-text">
+                <a href="#" class="items__list-item-text-link link link--black">Briggs Stratton S213</a>
+                <p class="items__list-item-text-desc">Фильтр маслянный</p>
+              </div>
+              <div class="items__list-item-price">
+                <span class="items__list-item-price-value">4 150 ₸</span>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
     </section>
     <section class="filters-benefits">
       <div class="filters-benefits__item">
@@ -236,8 +223,9 @@
         <a href="tel:+77001286432" class="link">+7 700 128 64 32</a>
       </div>
     </footer>
-  </div>
-  <script src="js/main.js"></script>
+    </div>
+    <script src="js/masonry.pkgd.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
